--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Mortgage Calculator</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;700&family=Raleway:ital,wght@0,300;0,400;0,900;1,300&display=swap"
+    rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css' />
   <link rel='stylesheet' href='../css/style.css' />
 </head>
